# pygooglenews

./: .gitignore  GoogleNews.ipynb  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: 👷Flow.yml
.registry/: .dockerignore  Dockerfile
.requirements/: requirements.txt
docs/: .readthedocs.yaml  01_start.rst  02_config.rst  03_module.rst  conf.py  index.rst
docs/_static/: custom.css
docs/_templates/: custom-class-template.rst  navbar.html
examples/: example.py
igotnews/: __init__.py  config.py  default_settings.toml  main.py
pygooglenews/: __init__.py
tests/: test_unit.py
