[tool.poetry]
name = "igotnews"
version = "0.1.2"
description = "If Google News had a Python library"
authors = ["mraniki <8766259+mraniki@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["News", "RSS", "Scraping", "Data Mining"]
packages = [
    {include = "igotnews"}
]

[tool.poetry.urls]
"Changelog" =  "https://github.com/mraniki/igotnews/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/igotnews/discussions"
"Issues" =  "https://github.com/mraniki/igotnews/issues"


[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
beautifulsoup4 = "^4.12.2"
dateparser = "^1.1.8"
requests = "^2.31.0"
loguru = "0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^8.0.2"
ruff = ">=0.0.283,<0.0.284"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
exclude = [
  ".github/*",
  "docs/*",
]
ignore = ["E401","F401","F811"]
format = "github"
fixable = ["ALL"]

[tool.pylint.exceptions]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
    "builtins.RuntimeError",
]

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-loguru = "^0.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
pydata-sphinx-theme = "^0.13.3"
sphinx-hoverxref = "^1.3.0"
sphinx-notfound-page = "^0.8.3"
sphinx_copybutton = "0.5.2"
myst_parser = "^2.0.0"
sphinx_design = "^0.5.0"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
python_classes = "Test*"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    "*/config.py"
]


[tool.semantic_release]
upload_to_vcs_release = true
version_variables = ["pyproject.toml:version","igotnews/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"
commit_parser = "emoji"


[tool.semantic_release.commit_parser_options]
major_tags = [
    "BREAKING",
    "ðŸ’¥",
    ":boom:",
  ]
minor_tags = ["feat",
    "ðŸ¥š",":egg:",
    "ðŸš€",":rocket:",
    "ðŸ’„",":lipstick:",
    "âœ¨",":sparkles:",
]

patch_tags = ["fix","bump","Update",
    "ðŸŽ¨",":art:",
    "ðŸ›",":bug:",
    "ðŸš‘",":ambulance:",
    "âš¡",":zap:",
    "ðŸ”¥",":fire:",
    "ðŸš¨",":rotating_light:",
    "â™»ï¸",":recycle:",
    "ðŸ”§",":wrench:",
    "â¬†ï¸",":arrow_up:",
    "ðŸ©¹",":adhesive_bandage:",
    "ðŸ‘·",":construction_worker:",
    "ðŸ“",":memo:",
    "ðŸ”’",":lock:",
    "ðŸ‘½",":alien:",
    "ðŸ’¬",":speech_balloon:",
    "ðŸ¥…",":goal_net:",
    "âœ…",":white_check_mark:",
    "ðŸ³",":whale:",
    "ðŸ™ˆ",":see_no_evil:",
    "âš—ï¸",":alembic:",
    "ðŸ§",":monocle_face:",
    "ðŸ”‡",":mute:",
    "ðŸ”Š",":volume:",
]
