[tool.poetry]
name = "pygooglenews"
version = "0.1.3"
description = "If Google News had a Python library"
authors = ["kotartemiy <bugara.artem@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.newscatcherapi.com"
keywords = ["News", "RSS", "Scraping", "Data Mining"]


[tool.poetry.dependencies]
python = "^3.6, ^3.12"
feedparser = "^6.0.8"  
beautifulsoup4 = "^4.11.1"  
dateparser = "^1.1.1"  
requests = "^2.28.1"  


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
